<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="360dp"
            android:layout_height="192dp"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            app:srcCompat="@drawable/formaordenada" />

        <Button
            android:id="@+id/btnOrigen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:contentDescription="Ecuación de la recta"
            android:text="@string/btnOrigen" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="358dp"
            android:layout_height="176dp"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            app:srcCompat="@drawable/formapuntopendiente" />

        <Button
            android:id="@+id/btnPendiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:text="@string/btnPendiente"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnTerminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:text="@string/btnTerminar" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="10sp"
            android:gravity="bottom|center"
            android:text="@string/txtDatos"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>